2005-12-26  Mark Kettenis  <kettenis@gnu.org>

	* obsd-tdep.c: New file.
	* obsd-tdep.h: New file.
	* Makefile.in (obsd_tdep_h): New variable.
	(ALLDEPFILES): Add obsd-tdep.c.
	(obsd-tdep.o): New target.

2005-12-23  Michael Snyder  <msnyder@redhat.com>

	* inf-ptrace.c: Spelling correction, comment.
	* inf-ttrace.c: Ditto.

2005-12-23  Eli Zaretskii  <eliz@gnu.org>

	* tui/tui-file.c: 
	* tui/tui-disasm.c: 
	* tui/tui-data.h: 
	* tui/tui-data.c: 
	* tui/tui-command.h: 
	* tui/tui-command.c: 
	* tui/tui-win.h: 
	* tui/tui-win.h: 
	* tui/tui-win.c: 
	* tui/tui-stack.h: 
	* tui/tui-stack.c: 
	* tui/tui-source.h: 
	* tui/tui-source.c: 
	* tui/tui-regs.h: 
	* tui/tui-regs.c: 
	* tui/tui-out.c: 
	* tui/tui-main.c: 
	* tui/tui-layout.h: 
	* tui/tui-layout.c: 
	* tui/tui-io.h: 
	* tui/tui-io.c: 
	* tui/tui-interp.c: 
	* tui/tui-hooks.h: 
	* tui/tui-hooks.c: 
	* tui/tui-file.h: 
	* tui/tui.h: 
	* tui/tui.c: 
	* tui/tui-winsource.h: 
	* tui/tui-winsource.c: 
	* tui/tui-wingeneral.h: 
	* tui/tui-wingeneral.c: 
	* tui/tui-windata.h: 
	* tui/tui-windata.c: 
	* signals/signals.c: 
	* nlm/Makefile.in: 
	* mi/mi-symbol-cmds.c: 
	* mi/mi-parse.h: 
	* mi/mi-parse.c: 
	* mi/mi-out.h: 
	* mi/mi-out.c: 
	* mi/mi-main.h: 
	* mi/mi-main.c: 
	* mi/mi-interp.c: 
	* mi/mi-getopt.h: 
	* mi/mi-getopt.c: 
	* mi/mi-console.h: 
	* mi/mi-console.c: 
	* mi/mi-common.h: 
	* mi/mi-common.c: 
	* mi/mi-cmds.h: 
	* mi/mi-cmds.c: 
	* mi/mi-cmd-var.c: 
	* mi/mi-cmd-stack.c: 
	* mi/mi-cmd-file.c: 
	* mi/mi-cmd-env.c: 
	* mi/mi-cmd-disas.c: 
	* mi/mi-cmd-break.c: Add (C) after Copyright.  Update the FSF
	address.

2005-12-22  Daniel Jacobowitz  <dan@codesourcery.com>

	* arm-linux-tdep.c (ARM_SET_R7_SIGRETURN, ARM_SET_R7_RT_SIGRETURN)
	(ARM_EABI_SYSCALL, arm_linux_sigtramp_cache, arm_linux_sigreturn_init)
	(arm_linux_rt_sigreturn_init, arm_linux_sigreturn_tramp_frame)
	(arm_linux_rt_sigreturn_tramp_frame)
	(arm_eabi_linux_sigreturn_tramp_frame)
	(arm_eabi_linux_rt_sigreturn_tramp_frame): New.