@@ -1,3 +1,3 @@
 # Target: OpenBSD/sparc
 TDEPFILES= sparc-tdep.o sparcnbsd-tdep.o sparcobsd-tdep.o nbsd-tdep.o \
-	corelow.o solib.o solib-svr4.o
+	obsd-tdep.o corelow.o solib.o solib-svr4.o
